# kotlin-slang

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: release.yml
kotlinslang/: build.gradle.kts
kotlinslang/src/androidTest/assets/: RangeAttribute.slang
kotlinslang/src/androidTest/assets/shaders/: attributes.slang  basic.slang  blend.slang  camera_texture.slang  custom_vertex.slang  gpu_particle.slang  rwtexture_view.slang
kotlinslang/src/androidTest/kotlin/com/shivaduke/kotlinslang/: SlangCompilerTest.kt
kotlinslang/src/main/cpp/: CMakeLists.txt  kotlinslang_jni.cpp
kotlinslang/src/main/kotlin/com/shivaduke/kotlinslang/: Model.kt  NativeCompileResult.kt  SlangCompiler.kt
spike/smoke/: CMakeLists.txt  corpus.cpp  main.cpp  reflect.cpp  smoke.cpp
